Fixed large alignment

--- a/wdd230/scoots/css/large.css
+++ b/wdd230/scoots/css/large.css
@@ -1,4 +1,33 @@
 @media only screen and (min-width: 60em) {
+  /*** Main > Article ***/
+  picture.scooters {
+    float: left;
+    margin-right: 1rem;
+  }
+
+  p.scooters {
+    text-align: left;
+  }
+
+  picture.atvs {
+    float: right;
+    margin-left: 1rem;
+  }
+
+  p.atvs {
+    text-align: left;
+  }
+
+  picture.jeeps {
+    float: left;
+    margin-right: 1rem;
+  }
+
+  p.jeeps {
+    text-align: left;
+  }
+
+  /*** Main > Weather ***/
   div.weather {
     display: grid;
     grid-template-columns: 1fr 1fr;
